--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <main id="principal">
           <p>En este primer proyecto les mostrare de mi. Con diferentes tipo de presentaciones como tablas, listas y enlaces</p>
           <h2>Información importante</h2>
-          <table class="egt">
+          <table>
 
             <tr>
           
