--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <ul>
             <li><a href="#principal">Sobre mi</a>
                 <ul>
-                    <li><a href="#InfoBibliografica">Informacion Bibliografica</a></li>
-                    <li><a href="#InfoAcademica">Informacion Academica</a></li>
+                    <li><a href="#InfoBibliografica">Información Bibliográfica</a></li>
+                    <li><a href="#InfoAcademica">Informacion Académica</a></li>
                     <li><a href="#sitiosInteres">Sitios de Interes</a></li>
                     <li><a href="#FormContacto">Formulario de contacto</a></li>
                 </ul>
@@ -30,7 +30,7 @@
             enlaces</p>
         <h2>Información importante</h2>
         <section id="InfoBibliografica">
-            <h3>Información bibliografica</h3>
+            <h3>Información bibliográfica</h3>
             <table border="1">
 
                 <tr>
@@ -63,7 +63,7 @@
             </table>
         </section>
         <section id="InfoAcademica">
-            <h3>Informacion academica</h3>
+            <h3>Informacion académica</h3>
             <ol>
                 <li><b>Primaria y bachillerato: </b>Colegio Celestin Freinet</li>
                 <li><b>Pregrado: </b>Universidad de los Andes</li>
